tests-negative/src/main/java/kendal/test/negative/interpolation/InvalidVarReference.java
package kendal.test.negative.interpolation;

public class InvalidVarReference {

    void methodReferingToMissingVar() {
        System.out.println(+"${missingVariable}");
    }
}
